//    Copyright 2023 Yeong-won Seo
// 
//    Licensed under the Apache License, Version 2.0 (the "License");
//    you may not use this file except in compliance with the License.
//    You may obtain a copy of the License at
// 
//        http://www.apache.org/licenses/LICENSE-2.0
// 
//    Unless required by applicable law or agreed to in writing, software
//    distributed under the License is distributed on an "AS IS" BASIS,
//    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//    See the License for the specific language governing permissions and
//    limitations under the License.

syntax = "proto3";

option csharp_namespace = "Frouros.Host";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
package pvi;

service PVI
{
  rpc GetRemains(google.protobuf.Empty)   returns (PacketCollection);
  rpc SetVerdict(PacketVerdictCollection) returns (google.protobuf.Empty);
}

message Packet
{
  uint32                    uid       = 1;
  bytes                     packet    = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message PacketVerdict
{
  uint32 uid    = 1;
  bool   accept = 2;
}

message PacketCollection
{
  repeated Packet packets = 1;
}

message PacketVerdictCollection
{
  repeated PacketVerdict verdicts = 1;
}
